<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.Homescreen">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/homescreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/homescreen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="170dp"
        android:layout_below="@id/homescreenText"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/topButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/patientsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:height="120dp"
            android:onClick="onPatients"
            android:text="@string/patients" />

        <Button
            android:id="@+id/dataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/patientsButton"
            android:width="120dp"
            android:height="120dp"
            android:onClick="onData"
            android:text="@string/data" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/messagesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:height="120dp"
            android:onClick="onMessages"
            android:text="@string/messages" />

        <Button
            android:id="@+id/accountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/messagesButton"
            android:width="120dp"
            android:height="120dp"
            android:onClick="onAccount"
            android:text="@string/account" />
    </RelativeLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottomButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onLogout"
        android:text="@string/logout" />

</RelativeLayout>