<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.TwoFactorAuthentication">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="170dp"
        android:contentDescription="@string/logo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterPinText"
        android:text="@string/enter_security_pin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"/>

    <EditText
        android:layout_width="wrap_content"
        android:width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/pin"
        android:layout_below="@id/enterPinText"
        android:id="@+id/pin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:autofillHints="password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterPin"
        android:text="@string/enter"
        android:onClick="onPinEnter"
        android:layout_below="@id/pin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>


</RelativeLayout>