<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.Patients">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_patient_name"
        android:id="@+id/selectPatientNameText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_patient_name"
        android:id="@+id/patientEditText"
        android:layout_below="@id/selectPatientNameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="name" />

    <ListView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:id="@+id/patientList"
        android:layout_below="@id/patientEditText"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/home_button"
        android:onClick="onHome"
        app:srcCompat="@drawable/ic_home_black_24dp" />

</RelativeLayout>