<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/patient_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/age"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/status"
        android:textSize="15sp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/statusImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/statusText"
        android:layout_alignStart="@id/statusText"
        android:src="@drawable/ic_baseline_clear_24"
        android:contentDescription="@string/status" />

</RelativeLayout>